--- a/index.html
+++ b/index.html
@@ -4,93 +4,92 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portofolio - Prayudha Afrizal Erlangga</title>
-  <meta name="description" content="Website portofolio sederhana dengan HTML, CSS, dan JavaScript." />
-  <style>
-    :root{--primary:#2563eb;--bg:#f8fafc;--text:#0f172a;--muted:#6b7280;--card:#ffffff}
-    *{box-sizing:border-box;margin:0;padding:0;font-family:Inter, sans-serif}
-    body{background:var(--bg);color:var(--text);line-height:1.6}
-    header{padding:20px;position:sticky;top:0;background:white;box-shadow:0 2px 8px rgba(0,0,0,0.05)}
-    nav{max-width:960px;margin:auto;display:flex;justify-content:space-between;align-items:center}
-    nav a{margin-left:16px;text-decoration:none;color:var(--muted)}
-    nav a:hover{color:var(--primary)}
-
-    section{max-width:960px;margin:60px auto;padding:0 16px}
-    h1,h2,h3{color:var(--text)}
-    h1{font-size:32px;margin-bottom:12px}
-    h2{font-size:24px;margin-bottom:16px;text-align:center}
-    .hero{text-align:center;padding:60px 20px;background:linear-gradient(135deg,var(--primary),#7c3aed);color:white;border-radius:12px}
-    .hero h1{font-size:40px;margin-bottom:12px}
-    .hero p{color:#e2e8f0}
-    .btn{display:inline-block;margin-top:20px;padding:10px 16px;border-radius:8px;background:white;color:var(--primary);font-weight:600;text-decoration:none}
-    .about,.projects{margin-top:40px}
-    .about p{text-align:center;color:var(--muted)}
-    .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:20px}
-    .card{background:var(--card);padding:16px;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,0.05);transition:transform .2s}
-    .card:hover{transform:translateY(-4px)}
-    footer{text-align:center;padding:20px;color:var(--muted);margin-top:60px;font-size:14px}
-
-    /* Responsive */
-    @media(max-width:600px){.hero h1{font-size:28px}}
-  </style>
+  <meta name="description" content="Website portofolio modern dengan HTML, CSS, dan JavaScript." />
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <header>
     <nav>
-      <div style="font-weight:700;color:var(--primary)">Portofolio</div>
+      <div class="logo">Portofolio</div>
       <div>
         <a href="#about">About</a>
+        <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
       </div>
     </nav>
   </header>
 
   <section class="hero">
-    <h1>Halo, Nama saya Prayudha Afrizal Erlangga👋</h1>
-    <p>Saya mahasiswa yang sedang belajar Web Development. Ini adalah portofolio saya.</p>
-    <a href="#projects" class="btn">Lihat Proyek</a>
+    <h1 id="typing"></h1>
+    <p>Mahasiswa yang sedang belajar Web Development. Selamat datang di portofolio saya.</p>
+    <a href="#projects" class="btn">🚀 My Projects</a>
   </section>
 
   <section id="about" class="about">
-    <h2>Tentang Saya</h2>
-    <p>Saya memiliki ketertarikan di bidang web development dan game development saya sedang mendalami HTML, CSS, dan JavaScript. Website ini adalah contoh pembuatan web menggunakan HTML,CSS, dan JavaScript.</p>
+    <h2>✨ About Me</h2>
+    <p>Halo nama saya Prayudha Afrizal Erlangga, Saya memiliki ketertarikan di bidang <b>web development</b> dan <b>game development</b>. Saat ini saya sedang mendalami HTML, CSS, dan JavaScript. Saya ingin suatu saat nanti bisa berkontribusi dalam bidang pengembangan software terutama pada game development.</p>
   </section>
 
-  <section id="projects" class="projects">
-    <h2>Proyek</h2>
-    <div class="projects-grid">
+  <section id="skills" class="skills">
+    <h2>🛠️ Skills</h2>
+    <div class="skills-grid">
       <div class="card">
-        <h3>Project 1</h3>
-        <p>Website sederhana dengan HTML,CSS, dan JavaScript.</p>
+        <div class="card-icon"><i class="fa-brands fa-html5" style="color:#e44d26"></i></div>
+        <h3>HTML</h3>
       </div>
       <div class="card">
-        <h3>Project 2</h3>
-        <p>Projek Aplikasi kecil pengelolaan donor darah dengan C#.</p>
+        <div class="card-icon"><i class="fa-brands fa-css3-alt" style="color:#1572b6"></i></div>
+        <h3>CSS</h3>
       </div>
       <div class="card">
-        <h3>Project 3</h3>
-        <p>Projek sederhana python CRUD pengelolaan bahan pangan.</p>
+        <div class="card-icon"><i class="fa-brands fa-js" style="color:#f7df1e"></i></div>
+        <h3>JavaScript</h3>
+      </div>
+      <div class="card">
+        <div class="card-icon"><i class="fa-brands fa-python" style="color:#3776ab"></i></div>
+        <h3>Python</h3>
+      </div>
+      <div class="card">
+        <div class="card-icon"><i class="fa-solid fa-code" style="color:#68217a"></i></div>
+        <h3>C#</h3>
       </div>
     </div>
   </section>
 
-  <footer>
-    © <span id="year"></span>Angga. made with 🤖
+  <section id="projects" class="projects">
+    <h2>💻 Projects</h2>
+    <div class="projects-grid">
+      <div class="card">
+        <div class="card-icon"><i class="fa-solid fa-globe"></i></div>
+        <h3>Project 1</h3>
+        <p>Website sederhana dengan HTML, CSS, dan JavaScript.</p>
+      </div>
+      <div class="card">
+        <div class="card-icon"><i class="fa-solid fa-database"></i></div>
+        <h3>Project 2</h3>
+        <p>Aplikasi pengelolaan donor darah dengan C# dan PostgreSQL.</p>
+      </div>
+      <div class="card">
+        <div class="card-icon"><i class="fa-solid fa-code"></i></div>
+        <h3>Project 3</h3>
+        <p>Aplikasi CRUD sederhana pengelolaan bahan pangan dengan Python.</p>
+      </div>
+    </div>
+  </section>
 
+  <section id="contact" class="contact">
+    <h2>📞 Contact</h2>
+    <p>Hubungi saya melalui:</p>
+    <a href="https://wa.me/6285803681573" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a> 
+    <a href="https://instagram.com/afrzlgga" target="_blank"><i class="fab fa-instagram"></i> Instagram</a> 
+  </section>
+
+  <footer>
+    © <span id="year"></span> Prayudha Afrizal Erlangga. Made with 🤖
   </footer>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    
-    window.addEventListener('scroll', () => {
-      const nav = document.querySelector('header');
-      if(window.scrollY > 30){
-        nav.style.background = 'var(--primary)';
-        nav.style.color = 'white';
-      } else {
-        nav.style.background = 'white';
-        nav.style.color = 'var(--primary)';
-      }
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
